--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,3 +1,8 @@
 <h2><%= @article.title %></h2>
 
 <p><%= @article.content %></p>
+
+<form action="/articles/<%= @article.id %>" method="POST">
+  <input id="hidden" type="hidden" name="_method" value="DELETE">
+  <input type="submit" />
+</form>
