--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,3 @@
-<h1>Is it working?</h1>
 <% @articles.each do |article| %>
-  <li><%= article.title %><li>
+  <li><%= article.title %></li>
 <% end %>
